# ffmpeg_UI

./: .env.example  .gitignore  GEMINI.md  QWEN.md  README.md  details.txt  ffmpeg_UI.code-workspace  package-lock.json  package.json  run.bat  run.py  start.cmd  架构.md
backend/: .gitignore  __init__.py  app.py  config.py  crud.py  database.py  dependencies.py  limiter.py  main.py  models.py  processing.py  pyproject.toml  requirements.txt  schemas.py  security.py  target.txt
backend/app/: __init__.py  main.py
backend/app/api/: capabilities.py  delete.py  download.py  files.py  process.py  tasks.py  upload.py  users.py
backend/app/core/: config.py  database.py  deps.py  exceptions.py  limiter.py  security.py
backend/app/crud/: __init__.py  crud.py  crud_file.py  crud_task.py  crud_user.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  file.py  schemas.py  system.py  task.py  user.py
backend/app/services/: __init__.py  ffmpeg_builder.py  ffmpeg_runner.py  ffprobe_runner.py  file_validator.py  hw_accel.py  manager.py  processing.py  worker.py
backend/routers/: files.py  tasks.py  users.py
backend/tests/: README.md  conftest.py  run_tests.py  test_api_auth.py  test_api_files.py  test_api_tasks.py  test_backend_changes.py  test_config.py  test_crud.py  test_ffmpeg_command.py  test_file_info.py  test_imports.py  test_multi_queue.py  test_processing.py  test_routes.py  test_schemas.py  test_security.py  test_specific_changes.py  test_upload.py  validate_multi_queue.py
doc/: 重构要求.md
docs/: backend-structure.md
src/: App.vue  (+1 more)
(+35 files in other folders)
